Add Netlify deployment configuration and update production environment

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [{"glob": "**/*", "input": "public"}],
+            "assets": [
+              {"glob": "**/*", "input": "public"},
+              {"glob": "_redirects", "input": "src", "output": "/"}
+            ],
             "styles": ["src/styles.scss"],
             "outputPath": "dist/freshers-angular"
           },
